atualiza PersonalServiceTest para usar getFirst() seguindo o Java 21